Purged Useless Code

--- a/rigs.html
+++ b/rigs.html
@@ -62,7 +62,7 @@
 				<span>R5.1 | 07/08/2021</span>
 			</div>
 			<!--
-			<div id="experimentalRig" class="rig-button hidden-download" onclick="downloadRig(null)">
+			<div id="experimentalRig" class="rig-button" onclick="downloadRig(null)">
 				Experimental (Not Active)
 				<br>
 				<span>None | N/A</span>
