Added new Experimental Rig File

--- a/rigs.html
+++ b/rigs.html
@@ -61,13 +61,11 @@
 				<br>
 				<span>R5.1 | 07/08/2021</span>
 			</div>
-			<!--
-			<div id="experimentalRig" class="rig-button" onclick="downloadRig(null)">
-				Experimental (Not Active)
+			<div id="experimentalRig" class="rig-button" onclick="downloadRig('SCAR_E5.2.blend')">
+				Experimental
 				<br>
-				<span>None | N/A</span>
+				<span>E5.2 | 03/09/2021</span>
 			</div>
-			-->
 			<div class="hyperlinks">
 				<ul>
 					<li><a class="link">SACR Stable Changelog</a></li>
