Hit inactive links on rigs.html

--- a/rigs.html
+++ b/rigs.html
@@ -68,8 +68,8 @@
 			</div>
 			<div class="hyperlinks">
 				<ul>
-					<li><a class="link">SACR Stable Changelog</a></li>
-					<li><a class="link">SACR Experimental Changelog (Compared to Stable Release)</a></li>
+					<li hidden><a class="link">SACR Stable Changelog</a></li>
+					<li hidden><a class="link">SACR Experimental Changelog (Compared to Stable Release)</a></li>
 				</ul>
 				<span class="monospace">* All dates are in the dd/mm/yyyy format</span>
 			</div>
