--- a/rigs.html
+++ b/rigs.html
@@ -61,10 +61,10 @@
 				<br>
 				<span>R5.1 | 07/08/2021</span>
 			</div>
-			<div id="experimentalRig" class="rig-button" onclick="downloadRig('SACR_E5.2.blend')">
+			<div id="experimentalRig" class="rig-button" onclick="downloadRig('SACR E5.2_Beta3.blend')">
 				Experimental
 				<br>
-				<span>E5.2 | 03/09/2021</span>
+				<span>E5.2 Beta 3 | 03/09/2021</span>
 			</div>
 			<div class="hyperlinks">
 				<ul>
