Updated Experimental Rig

--- a/rigs.html
+++ b/rigs.html
@@ -61,13 +61,11 @@
 				<br>
 				<span>R5.2 | 11/11/2021</span>
 			</div>
-			<!--
-			<div id="experimentalRig" class="rig-button" onclick="downloadRig('SACR E5.2_Beta5.blend')">
+			<div id="experimentalRig" class="rig-button" onclick="downloadRig('SACR E5.3_Alpha1.blend')">
 				Experimental
 				<br>
-				<span>E5.2 Beta 5 | 02/10/2021</span>
+				<span>E5.3 Alpha 1 | 29/11/2021</span>
 			</div>
-			-->
 			<div class="hyperlinks">
 				<ul>
 					<li hidden><a class="link">SACR Stable Changelog</a></li>
