Updated some shit

--- a/rigs.html
+++ b/rigs.html
@@ -67,11 +67,9 @@
 				<span>E5.3 Alpha 3 | 14/12/2021</span>
 			</div>
 			<div class="hyperlinks">
-				<ul>
-					<li hidden><a class="link">SACR Stable Changelog</a></li>
-					<li hidden><a class="link">SACR Experimental Changelog (Compared to Stable Release)</a></li>
-				</ul>
-				<span class="monospace">* All dates are in the dd/mm/yyyy format</span>
+				<a class="link" onclick="openInternal('sacr-stable-changelog.html')">SACR Stable Changelog</a><a class="link">SACR Experimental Changelog</a><a class="link" onclick="openExternal('https://www.youtube.com/watch?v=BhBtHKRXFu8')">Latest Release Video</a>
+				<br>
+				<div class="monospace">* All dates are in the dd/mm/yyyy format</div>
 			</div>
 		</div>
 	</div>
