--- a/rigs.html
+++ b/rigs.html
@@ -4,8 +4,9 @@
 <head>
 	<!--  Meta  -->
 	<meta charset="UTF-8">
-	<title>Home page | PORTFOLIO</title>
+	<title>SACR Minecraft Rig | PORTFOLIO</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="assets/images/Favicon/favicon.ico" />
 	<!--  Styles  -->
 	<link rel="stylesheet" href="assets/styles/main-style.css">
 	<link href="https://unpkg.com/pattern.css" rel="stylesheet">
@@ -56,15 +57,15 @@
 			<p>Download the latest stable and experimental builds here. Stable releases are the more stable rigs while
 				Experimental rigs are generally more up to date but can have some issues regarding stability, once a
 				Experimental Rig is deemed stable enough it is then listed as the latest stable rig.</p>
-			<div id="stableRig" class="rig-button" onclick="downloadRig('SACR_R5.2.zip')">
+			<div id="stableRig" class="rig-button" onclick="downloadRig('SACR_R6.zip')">
 				Stable
 				<br>
-				<span>R5.2 | 11/11/2021</span>
+				<span>R6.0 | 26/01/2022</span>
 			</div>
-			<div id="experimentalRig" class="rig-button" onclick="downloadRig('SACR E5.3_Alpha3.blend')">
+			<div id="experimentalRig" class="rig-button" onclick="downloadRig('')" style="display: none;">
 				Experimental
 				<br>
-				<span>E5.3 Alpha 3 | 14/12/2021</span>
+				<span>null | null</span>
 			</div>
 			<div class="hyperlinks">
 				<a class="link" onclick="openInternal('sacr-stable-changelog.html')">SACR Stable Changelog</a><a class="link">SACR Experimental Changelog</a><a class="link" onclick="openExternal('https://www.youtube.com/watch?v=BhBtHKRXFu8')">Latest Release Video</a>
@@ -83,10 +84,7 @@
 			<div class="faq-question">
 				<span class="faq-question-head"><strong>Q</strong>: What Software do these Rigs require?</span>
 				<br>
-				<strong>A</strong>: All Rigs posted on this page are made and tested in Blender 2.83.15 and newer LTS
-				Builds, so any version of Blender newer than 2.83 can use these rigs seemelessly, but be cautious trying
-				to use these rigs in anything older (Such as 2.79 or older) as the Drivers and Scripts (If any) can and
-				will break.
+				<strong>A</strong>: All Rigs posted on this page are made and tested in Blender 2.93.7, this is the recommended version to use SACR in as it will provide the best quality in terms of User Experience. SACR is untested in Blender 3.0, as such, it is not guarenteed all rig features will work seamlessly
 			</div>
 
 			<div class="faq-question">
