--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,9 @@
 <head>
     <!--  Meta  -->
     <meta charset="UTF-8">
-    <title>Home page | PORTFOLIO</title>
+    <title>Contact | PORTFOLIO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="assets/images/Favicon/favicon.ico" />
     <!--  Styles  -->
     <link rel="stylesheet" href="assets/styles/main-style.css">
     <link href="https://unpkg.com/pattern.css" rel="stylesheet">
