--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
 	<!--  Meta  -->
 	<meta charset="UTF-8">
-	<title>Home page | PORTFOLIO</title>
+	<title>Home | PORTFOLIO</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="assets/images/Favicon/favicon.ico" />
 	<!--  Styles  -->
 	<link rel="stylesheet" href="assets/styles/main-style.css">
 	<link rel="stylesheet" href="lost-angel/lost-angel.css">
