--- a/sacr-stable-changelog.html
+++ b/sacr-stable-changelog.html
@@ -4,8 +4,9 @@
 <head>
 	<!--  Meta  -->
 	<meta charset="UTF-8">
-	<title>Home page | PORTFOLIO</title>
+	<title>SACR Changelog | PORTFOLIO</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="assets/images/Favicon/favicon.ico" />
 	<!--  Styles  -->
 	<link rel="stylesheet" href="assets/styles/main-style.css">
 	<link rel="stylesheet" href="lost-angel/lost-angel.css">
@@ -25,9 +26,9 @@
 				</div>
 				<br>
 				<div class="header-middle">
-					<h1>Landing page</h1>
+					<h1>SACR Changelog</h1>
 					<h2>
-						Welcome to the site that is built to represent Sakura and inform you of all of his projects
+						
 					</h2>
 				</div>
 				<br>
@@ -53,61 +54,44 @@
 		<br>
         <span class="changelog-return link" onclick="openInternal('rigs.html')"> Return to Rigs page</span>
 		<div class="raw-text">
-			SACR Revision 5.1:<br>
-### Fixed<br>
-> Flipped Eyebrow Normals<br>
-> Alex Arm Normals <br>
-<br>
-### Changes:<br>
-> Added Separate SSS Colour Input<br>
-> Expanded and Restructured Iris and Eyewhite Material<br>
-> Reorganized and Simplified Default UI<br>
-<br>
-### Additions<br>
-> Rigged Hair<br>
-<br>
-### Removed<br>
-> Diffuse Shader Option<br>
-<br>
-<br>
-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=<br>
-SACR Revision 5:<br>
-### Fixes<br>
-> UV Mappings fixed and re-aligned<br>
-> Removed Unused and broken settings<br>
-> Removed Broken Drivers<br>
-<br>
-### Changes<br>
-> Changed how Pupils are Scaled<br>
-> Arm Anchor point changed<br>
-> Updated and Simplified Boneshapes<br>
-> Changed Eyebrow Thickness to Shapekey<br>
-> Improved Female Deform<br>
-> Updated Default Workspace<br>
-> Updated Image Names<br>
-> Armature and Master Collection names updated<br>
-> Armature and Mesh collections fused<br>
-> Updated ArmIK to Match Leg IK<br>
-> Updated Eyebrow Controls<br>
-> Updated Skeleton Layer organization<br>
-> Default skin and materials set for Steve skin<br>
-<br>
-### Added<br>
-> Separate Emission Mask Inputs for each Eye<br>
-> Pupils + Custom Pupil Support<br>
-> Stretch to Legs<br>
-> Shapekey to Lattices for Custom Deforms<br>
-> Restrictions on scale, allowing for easy Child Preset creation<br>
-> Stretch to Arms<br>
-> Added a two step toggle on Eyes and Eyebrows<br>
-> Added a Separate toggle for Mouth<br>
-> Added easy smoothing on arms & torso<br>
-<br>
-### Removed<br>
-> Round Eyes<br>
-> Complete HD Skin Compatability<br>
-> Diffuse Material<br>
-> Round Eye<br>
+			# Sakura's Advanced Character Rig<br>
+			Latest Version: R6<br>
+			--------<br>
+			SACR Revision 6:<br>
+			### Fixed<br>
+			> Z Lock not enabled on certain face bones<br>
+			> Duplicate Skin File<br>
+			> Removed "PurgeThis" Material<br>
+			> Renamed "EyeTex_Cat.png.001" to "EyeTex_Cat.png"<br>
+			> Side Middle Control pins on Left eye not being weighted correctly<br>
+			> Square mouth not being a square<br>
+			> Changed Math Expression for Iris scale<br>
+			> Teeth Material not applied to Teeth<br>
+			> Named all objects with default names<br>
+			> Matched "Mesh" names to "Object" names on all Objects<br>
+			<br>
+			### Changes:<br>
+			> Eyelash Lattice given more Loop Creases<br>
+			> Camera no longer in "SACR" Collection<br>
+			> General Optimizations<br>
+			> Removed the random square in the "FaceControlPanel" object<br>
+			> Rearanged Overall Rig Controls<br>
+			> Enabled Smooth mode on Arms<br>
+			> Changed Hair Rig obj name to "SARH V1"<br>
+			> - SAHR stands for "Sakura's Advanced Hair Rig"<br>
+			> Internal ID for SACR Armature changed to "SACR R3"<br>
+			> - This is due to the current rig being based on the SACR R3 Architecture<br>
+			<br>
+			### Added:<br>
+			> Female Mesh modified and improved<br>
+			> 5 more Eyelash types<br>
+			> Added extra Arm-IK function to disable Wrist Autorotation<br>
+			> Added "Master" Label to master rig collection<br>
+			<br>
+			### Removed:<br>
+			> Adjustable Iris Size (Due to new Expression being used to auto-scale Pupils)<br>
+			> Removed Text on side of head<br>
+
 		</div>
     </div>
 	<!-- FOOT BEGIN -->
