Changed "Rig Wiki" link to "Commissions"

--- a/contact.html
+++ b/contact.html
@@ -576,7 +576,7 @@
                     <div class="nav-content">
                         <div class="nav-item" onclick="openInternal('index.html')">Home</div>
                         <div class="nav-item" onclick="openInternal('rigs.html')">Rigs</div>
-                        <div class="nav-item" onclick="openInternal('wiki/wiki.html')">Rig Wiki (WIP)</div>
+						<div class="nav-item" onclick="openExternal('https://sakura-sedaia.carrd.co/',1)">Commissions</div>
                         <div class="nav-item" onclick="openInternal('contact.html')">Contact</div>
                     </div>
                 </div>
