Shit went wrong, lost a bunch a files, but now restored

--- a/rigs.html
+++ b/rigs.html
@@ -155,6 +155,8 @@
 				<div onclick="openExternal('https://youtube.com/c/SakuraSedaia')"><span >Youtube</span></div>
 				<div onclick="openExternal('https://www.deviantart.com/')"><span>DeviantArt</span></div>
 				<div onclick="openExtennal('https://codepen.io/Sakura-Sedaia')"><span>Codepen</span></div>
+				<div onclick="openExtennal('https://twitter.com/SakuraSedaia')"><span>Twitter</span></div>
+				<div onclick="openExternal('https://github.com/SakuraSedaia')"><span>GitHub</span></div>
 			</div>
 			<div>
 				<h4><span>External API's</span></h4>
