More shit fixed, fml

--- a/contact.html
+++ b/contact.html
@@ -47,18 +47,19 @@
 	<!-- HEAD END -->
 
 	<!-- Email Contact Start -->
+	<div class="contact">
 	<div class="email-stuff">
         <h2>Email Information</h2>
-        <p>Should you ever need to contact me Via email, please reach me through the following Email Address</p>
-        <email onclick="copyEmail()">sakusedaia@outlook.com</email>
+        <p>Should you ever need to contact me Via email, please reach me through the following Email Address: <a onclick="copyEmail()">sakusedaia@outlook.com</a></p>
+        
     </div>
-
+	<!-- Discord Contact Start -->
     <div class="discord-stuff">
         <h2>Discord Information</h2>
-        <p>Should you ever need to contact me Via Discord, you can reach me through either of the following, by DMing me or joining my Discord Server </p>
-        <email onclick="copyEmail()">sakusedaia@outlook.com</email>
+        <p>If you are planning to contact me through discord, you can message me directly via my Username, <a onclick="copyDiscUser()">Sakura4Eva#5245</a> or join my Discord Server and use it to contact me directly there, <a onclick="openExternal('https://discord.gg/9JTuWN8Gr8')">https://discord.gg/9JTuWN8Gr8</a></p>
+        
     </div>
-
+</div>
 	<!-- FOOT BEGIN -->
 	<div class="footer">
 		<div class="clusterfuck">
@@ -73,8 +74,6 @@
 				<div onclick="openExternal('https://youtube.com/c/SakuraSedaia')"><span >Youtube</span></div>
 				<div onclick="openExternal('https://www.deviantart.com/')"><span>DeviantArt</span></div>
 				<div onclick="openExtennal('https://codepen.io/Sakura-Sedaia')"><span>Codepen</span></div>
-				<div onclick="openExtennal('https://twitter.com/SakuraSedaia')"><span>Twitter</span></div>
-				<div onclick="openExternal('https://github.com/SakuraSedaia')"><span>GitHub</span></div>
 			</div>
 			<div>
 				<h4><span>External API's</span></h4>
