Updates people, Updates!
Revised Rig Download Page

Removed Works and Lost Angel sections on Home Page

Changed "Home" to
"About Me" in Nav elements

--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,10 @@
 				</div>
 				<div class="navigation">
 					<div class="nav-content">
-						<div class="nav-item" onclick="openInternal('index.html')">Home</div>
+						<div class="nav-item" onclick="openInternal('index.html')">About Me</div>
 						<div class="nav-item" onclick="openInternal('rigs.html')">Rigs</div>
 						
-						<div class="nav-item" onclick="openExternal('https://sakura-sedaia.carrd.co/',1)">Commissions</div>
+						<!--<div class="nav-item" onclick="openExternal('https://sakura-sedaia.carrd.co/',1)">Commissions</div>-->
 						<div class="nav-item" onclick="openInternal('contact.html')">Contact</div>
 					</div>
 				</div>
@@ -65,7 +65,7 @@
 		<div class="clusterfuck">
 			<div>
 				<h4>Site Links</h4>
-				<div onclick="openInternal('index.html')"><span>Home</span></div>
+				<div onclick="openInternal('index.html')"><span>About Me</span></div>
 				<div onclick="openInternal('rigs.html')"><span>Rigs</span>
 				</div>
 			</div>
@@ -81,7 +81,7 @@
 			</div>
 		</div>
 		<div class="trademarks">
-			<div>&copy; 2022 Sakura Sedaia, All Rights Reserved</div>
+			<div>&copy; 2024 Sakura Sedaia, All Rights Reserved</div>
 		</div>
 
 	</div>
