Cleaned up the shit
Removed useless class entries and restructured class hierarchy in SCSS Source File. Edited SCSS-to-CSS Formatter to only output 1 CSS file instead of 2

--- a/rigs.html
+++ b/rigs.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="assets/images/Favicon/favicon.ico" />
 
-	<link rel="stylesheet" href="assets/styles/main-style.min.css">
+	<link rel="stylesheet" href="assets/styles/main-style.css">
 	<link rel="stylesheet" href="lost-angel/lost-angel.css">
 </head>
 
