Experimental SACR Build Released

--- a/rigs.html
+++ b/rigs.html
@@ -66,7 +66,7 @@
 					<div class="download-rig">
 						<div class="downloadDetail">Blender 2.93 | 0.97mb </div>
 						<br>
-						<div class="download-btn" onclick="downloadSACR('SACR_R6.zip')">Download Stable</div>
+						<div class="download-btn" onclick="downloadSACR('SACR_R6.zip')">Download</div>
 					</div>
 				</div>
 				<div class="col">
@@ -80,9 +80,9 @@
 					</p>
 
 					<div class="download-rig">
-						<div class="downloadDetail">Unknown | Unknown </div>
+						<div class="downloadDetail">Blender 4.1 | 6.23mb </div>
 						<br>
-						<div class="download-btn-na">Not Available</div>
+						<div class="download-btn" onclick="downloadSACR('SACR E7_Proto1.blend', 1)">Download</div>
 					</div>
 				</div>
 			</div>
